--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "luxon": "^3.4.3",
     "mongoose": "^8.0.0",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
